--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,6 @@
 * {
     padding: 0%;
     margin: 0%;
-    /* font-family: 'Zen Dots'; */
 }
 
 :root {
@@ -11,7 +10,6 @@
     --bg-header:#132c33;
     --name-email-field:#e4fbff;
 }
-
 
 
 .container {
@@ -28,7 +26,6 @@
     background-color: var(--bg-color);
 }
 
-
 header {
     padding: 10px;
     display: flex;
@@ -41,8 +38,6 @@ header {
     font-family: 'Zen Dots';
 }
 
-
-
 .content {
     grid-area: content;
     background-color: var(--bg-color);
@@ -51,20 +46,17 @@ header {
     font-size: 20;
 }
 
-
-
 label, textarea {
     font-size: large;
     letter-spacing: 1px;
     font-family: 'IBM Plex Sans', sans-serif;
     padding: 10px;
+    margin-top: 10px;
     margin-bottom: 10px;
     max-width: 500px;
     background-color: var(--bg-textarea-cyan);
     color:black;
 }
-
-
 
 
 footer {
@@ -74,7 +66,6 @@ footer {
     background-color:var(--bg-header);
     color:var(--text);
     font-size: medium;
-    /* font-family: 'Zen Dots'; */
     padding: 1rem;
     margin: 0;
     width: auto;
@@ -86,6 +77,7 @@ footer {
 input[type="text" i] {
     background-color: var(--name-email-field);
     border: none;
+    margin-top: 10px;
     margin-bottom: 10px;
     width: 10em;
     font-family: 'IBM Plex Sans', sans-serif;
@@ -98,8 +90,8 @@ input[type="email" i] {
     background-color: var(--name-email-field);
     border: none;
     margin-bottom: 10px;
+    margin-top: 10px;
     width: 10em;
-    /* color: var(--bg-header); */
     font-family: 'IBM Plex Sans', sans-serif;
     opacity: 50%;
 }
@@ -122,6 +114,8 @@ input[type="submit" i] {
     border-image: initial; */
     border: none;
     opacity: 50%;
+    /* margin-top: 10px; */
+    margin-bottom: 10px;
 }
 
 
