--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,8 +21,8 @@
     'header header header'
     'content content content'
     'footer footer footer';
-    height: 100vh;
-    width: 100wh;
+    height:100vh;
+    width: 100vw;
     background-color: var(--bg-color);
 }
 
@@ -71,7 +71,6 @@ footer {
     width: auto;
     height: auto;
     justify-content: center;
-    
 } 
 
 input[type="text" i] {
@@ -82,9 +81,7 @@ input[type="text" i] {
     width: 10em;
     font-family: 'IBM Plex Sans', sans-serif;
     opacity: 50%;
-
 }
-
 
 input[type="email" i] {
     background-color: var(--name-email-field);
@@ -118,7 +115,6 @@ input[type="submit" i] {
     margin-bottom: 10px;
 }
 
-
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
     color:black;
 }
@@ -126,3 +122,121 @@ input[type="submit" i] {
 ::-moz-placeholder { /* Firefox 19+ */
     color: black;
 }
+
+
+@media screen and (max-width: 600px) and (max-height: 720) {
+
+    .container {
+        display: grid;
+        grid-template-rows: 5rem 2fr 5rem;
+        grid-template-rows: 50px 1fr;
+        grid-template-columns: 250px 1fr;
+        grid-template-areas:
+        'header header header'
+        'content content content'
+        'footer footer footer';
+        height:100vh;
+        width: 100vw;
+        background-color: var(--bg-color);
+    }
+
+    header {
+        padding: 10px;
+        display: flex;
+        grid: header;
+        background-color:var(--bg-header);
+        color: var(--text);
+        justify-content:end;
+        padding: 1rem; 
+        position: static;
+        font-family: 'Zen Dots';
+    }
+
+    .content {
+        grid-area: content;
+        background-color: var(--bg-color);
+        color: var(--text);
+        padding-left: 10px;
+        font-size: 20;
+    }
+
+    label, textarea {
+        font-size: large;
+        letter-spacing: 1px;
+        font-family: 'IBM Plex Sans', sans-serif;
+        padding: 10px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        max-width: 500px;
+        background-color: var(--bg-textarea-cyan);
+        color:black;
+    }
+
+
+    input[type="text" i] {
+        background-color: var(--name-email-field);
+        border: none;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        width: 10em;
+        font-family: 'IBM Plex Sans', sans-serif;
+        opacity: 50%;
+    }
+    
+    input[type="email" i] {
+        background-color: var(--name-email-field);
+        border: none;
+        margin-bottom: 10px;
+        margin-top: 10px;
+        width: 10em;
+        font-family: 'IBM Plex Sans', sans-serif;
+        opacity: 50%;
+    }
+    
+    input[type="submit" i] {
+        color: rgba(0,0,0,0.5);
+        appearance: auto;
+        user-select: none;
+        white-space: pre;
+        align-items: flex-start;
+        text-align: center;
+        cursor: default;
+        color: black;
+        /* background-color:var(--text); */
+        /* box-sizing: border-box; */
+        padding: 1px 6px;
+        /* border-width: 2px; */
+        /* border-style: outset;
+        border-color: -internal-light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
+        border-image: initial; */
+        border: none;
+        opacity: 50%;
+        /* margin-top: 10px; */
+        margin-bottom: 10px;
+    }
+    
+    ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+        color:black;
+    }
+    
+    ::-moz-placeholder { /* Firefox 19+ */
+        color: black;
+    }
+
+    footer {
+        display: flex;
+        flex-direction: column;
+        grid-area: footer;
+        background-color:var(--bg-header);
+        color:var(--text);
+        font-size: medium;
+        padding: 1rem;
+        margin: 0;
+        width: auto;
+        height: auto;
+        justify-content: center;
+    }
+}
+
+
+
